Updated with Aravindhs work

--- a/Mid Term/midway_report.bib
+++ b/Mid Term/midway_report.bib
@@ -178,3 +178,29 @@ YEAR = {2007},
 	year = {2010},
 	url = {http://alchemy.cs.washington.edu}
 }
+
+@incollection{visualdictrene,
+year={2012},
+isbn={978-3-642-33714-7},
+booktitle={Computer Vision – ECCV 2012},
+volume={7576},
+series={Lecture Notes in Computer Science},
+editor={Fitzgibbon, Andrew and Lazebnik, Svetlana and Perona, Pietro and
+Sato, Yoichi and Schmid, Cordelia},
+doi={10.1007/978-3-642-33715-4_52},
+title={Visual Dictionary Learning for Joint Object Categorization and
+Segmentation},
+url={http://dx.doi.org/10.1007/978-3-642-33715-4_52},
+publisher={Springer Berlin Heidelberg},
+author={Jain, Aastha and Zappella, Luca and McClure, Patrick and Vidal,
+René},
+pages={718-731}
+}
+
+@techreport{graz02,
+	author = {Opelt, A., Pinz, A},
+	institution = {TU Graz},
+	title = {The TU Graz-02 database},
+	year = {2002},
+	url = {http://www.emt.tugraz.at/~pinz/data/GRAZ_02/}
+}
