Added citations for gist and superpixels

--- a/Mid Term/midway_report.bib
+++ b/Mid Term/midway_report.bib
@@ -204,3 +204,24 @@ pages={718-731}
 	year = {2002},
 	url = {http://www.emt.tugraz.at/~pinz/data/GRAZ_02/}
 }
+
+@ARTICLE{Gist,
+    author = {Aude Oliva and Antonio Torralba},
+    title = {Modeling the Shape of the Scene: A Holistic Representation of the Spatial Envelope},
+    journal = {International Journal of Computer Vision},
+    year = {2001},
+    volume = {42},
+    pages = {145--175}
+}
+
+@INPROCEEDINGS{Superpixel, 
+author={Mori, G.}, 
+booktitle={Computer Vision, 2005. ICCV 2005. Tenth IEEE International Conference on}, title={Guiding model search using segmentation}, 
+year={2005}, 
+month={oct.}, 
+volume={2}, 
+number={}, 
+pages={1417 -1423 Vol. 2}, 
+keywords={human body pose estimation;image segmentation;model search space;still images;superpixels;image segmentation;}, 
+doi={10.1109/ICCV.2005.112}, 
+ISSN={1550-5499},}
